--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.3",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1"
   },
   "scripts": {
