--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "homepage": "https://P4d1lh4.github.io/portfolio-arthur",
   "dependencies": {
     "framer-motion": "^10.16.4",
+    "gsap": "^3.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^7.9.6",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "zustand": "^5.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
